data/derived/comb/progs/unify/prog0420.ml.out
Characters 222-247:
  | h::t -> (cout, List.append [r] l) in
            ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
